cluster/kubevirt-manager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubevirt-manager
  namespace: kubevirt-manager
  annotations:
    kubernetes.io/ingress.class: traefik-internal
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik-internal
  rules:
    - host: kubevirt-manager.local.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubevirt-manager
                port:
                  name: http
